# MeetAndPlay

./: .gitignore  README.md  package-lock.json
Back/: Cargo.toml
Front/: package-lock.json  package.json
Front/public/: index.html  manifest.json  manifest.webmanifest  offline.html  service.js
Front/public/Service-workers/: service.js
Front/src/: App.svelte  ButtonAchat.svelte  ButtonEvent.svelte  CarouselEvenement.svelte  CarouselJeuxAchat.svelte  Navbar.svelte  main.js  store.js  test.svelte
Front/src/DetailsEvenement/: ButtonInscription.svelte  CarouselEvenementDetail.svelte
Front/src/Home/: ButtonAchat.svelte  ButtonEvent.svelte  ButtonProfil.svelte  CarouselEvenement.svelte  CarouselJeuxAchat.svelte  ProfilCard.svelte
Front/src/Profil/: BandeauTinder.svelte  SelectionProfil.svelte
Front/src/Service/: helper.js
Front/src/User/: Login.svelte  Register.svelte
Front/src/Utilitaire/: Navbar.svelte  NavbarBack.svelte
Front/src/home/: ButtonProfil.svelte  CarouselEvenement.svelte  CarouselJeuxAchat.svelte  ProfilCard.svelte
back/: .gitignore  Cargo.toml  Docker.md  Dockerfile  Rocket.toml  docker-compose.yml
back/database/: database.sqlite  migrate.sql  seed.sql
back/src/: main.rs  requirements.txt  server.py
