[package]
name = "back"
version = "0.1.0"
authors = ["slowblitz <jeremygarcia937@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.14"
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_derive = "1.0.116"
[dependencies.rocket_contrib]
version = "0.4.4"

features = ["json","sqlite_pool"]

